new adv data manip

--- a/dt00_data-manipulations.Rmd
+++ b/dt00_data-manipulations.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Data Manipulation"
+title: "Introduction to Data Manipulation"
 comment: "*introduction to wrangling data*"
 output: 
   html_document: 
