--- a/sh00_intro-to-dashboards.Rmd
+++ b/sh00_intro-to-dashboards.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Introduction to Dashboards"
+title: "Introduction to Dashboards (under construction)"
 comment: "*building data displays with `flexdashboard`*"
 output:
   html_document:
