--- a/gg00_intro-to-data-viz.Rmd
+++ b/gg00_intro-to-data-viz.Rmd
@@ -52,11 +52,36 @@ install.packages("tidyverse")
 library(tidyverse)
 ```
 
+# Import data 
+
+We will begin by importing the data from the wrangling section. These data come from a wikipedia table on [largest biotechnology and pharmaceutical companies](https://en.wikipedia.org/wiki/List_of_largest_biotechnology_and_pharmaceutical_companies).
+
+```{r TopPharmComp, message=FALSE, warning=FALSE}
+TopPharmComp <- readr::read_csv(file = "https://bit.ly/3gC67HT")
+TopPharmComp %>% glimpse(78)
+```
+
+## Format variables 
+
+We can see a few of the variables need to be formatted before we can start visualizing. 
+
+```{r format-variables}
+TopPharmComp %>% 
+  mutate(
+    # create factor
+    ranking = factor(ranking, ordered = TRUE),
+    # remove whitespace
+    stock_id = str_trim(string = stock_id, side = "both")) -> TopPharmComp
+# get skim
+TopPharmComp %>% skimr::skim()
+```
+
+
 # Visualize 
 
 We will start by looking at the trends of `market_cap_us_bil` over time (using `year`). 
 
-## Labels
+## Build the labels first!
 
 I suggest building labels **first** when making a figure or graph, because it forces us to think about what we should expect to see. For example, if we want to see `market_cap_us_bil` on the `y` and `market_cap_year` on the `x`, we can create these with a title using the `ggplot2::labs()` function below. 
 
@@ -66,14 +91,17 @@ lab_year_x_mrktcap <- ggplot2::labs(title = "Market Cap Trends Over Time",
                               x = "Year", y = "Market cap (USD in billions)")
 ```
 
+# Map Variables to Positions
 
-## Map Variables to Positions {.tabset}
+We map variables to positions (`x` and `y`) inside the `aes()` function, either globally inside `ggplot()` or locally inside a `geom()`. 
+
+## Positions {.tabset}
 
 The exercises below are a refresher on mapping variables to aesthetics and picking geoms. 
 
 ### exercise
 
-Map the `year` to the `x` and `market_cap_us_bil` to the `y` and add a `geom_point()`
+Map the `year` to the `x` and `market_cap_us_bil` to the `y` globally and add a `geom_point()`
 
 ```{r aes-ex-01, eval=FALSE}
 TopPharmComp %>% 
@@ -86,7 +114,7 @@ TopPharmComp %>%
 
 Check the solution below--what is wrong with this plot?
 
-```{r aes-sol-01, message=FALSE, warning=FALSE}
+```{r aes-sol-01, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComp %>% 
   ggplot(aes(x = year, y = market_cap_us_bil)) + 
   geom_point() + 
@@ -108,7 +136,7 @@ TopPharmComp %>%
 
 Check the updated graph below. It's closer to what we want, but not quite. What do you think the issue is?
 
-```{r aes-sol-02, message=FALSE, warning=FALSE}
+```{r aes-sol-02, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComp %>% 
   ggplot(aes(x = year, y = market_cap_us_bil)) + 
   geom_line() + 
@@ -132,14 +160,18 @@ Now the graph is looking how we want! We can see the trend lines are separated a
 
 Let's add some color to see more.
 
-```{r aes-sol-03, message=FALSE, warning=FALSE}
+```{r aes-sol-03, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComp %>% 
   ggplot(aes(x = year, y = market_cap_us_bil)) + 
   geom_line(aes(group = company_name)) + 
   lab_year_x_mrktcap
 ```
 
-## Map Variables to Aesthetics {.tabset} 
+# Map Variables to Aesthetics
+
+Aesthetics include visual elements like `size`, `color`, and `fill`.
+
+## Aesthetics {.tabset} 
 
 In the previous graph, we were able to get a different line per company. However, we want to identify more about these companies with color. 
 
@@ -165,7 +197,9 @@ gg_trend_line
 
 This graph is showing us more information that the previous plot. For example, we can see the companies with the best performance are on the `NYSE`, and those with relatively low performance are on the `TSX`. 
 
-```{r aes-sol-04-gg_trend_line, message=FALSE, warning=FALSE}
+This graph is better then the previous versions, but it still has too much information to be very helpful. For example, we have no idea which line belongs to which company?
+
+```{r aes-sol-04-gg_trend_line, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 gg_trend_line <- TopPharmComp %>% 
   ggplot(aes(x = year, y = market_cap_us_bil)) + 
   geom_line(aes(group = company_name, color = stock_exch)) + 
@@ -173,15 +207,21 @@ gg_trend_line <- TopPharmComp %>%
 gg_trend_line
 ```
 
-This graph is better then the previous versions, but it still has too much information to be very helpful. In the next section, we'll summarize the data a bit more to create different visualizations.
+In the next section, we'll summarize the data a bit more to create different visualizations.
 
-## Graphing Data Summaries {.tabset}
+# Graphing Data Summaries 
 
 We're going to summarize the data in `TopPharmComp`. Summarizations are helpful when we're interested in comparing variables across groups.
 
+## Grouped calculations {.tabset}
+
+Whenever we're grouping by a particular variable (or variables), we need to decide what summary calculation to use. In the section below we will use the `mean()` function to get the average market cap (in USD in billions).
+
 ### Graph Labels
 
-We want the `TopPharmComp` dataset to have one variable per `company_name` name and `stock_exch`. A good measure of central tendency for this is the `mean()` (or average). First we define the new labels.
+We want the `TopPharmComp` dataset to have one variable per `company_name` name and `stock_exch`. 
+
+A good measure of central tendency for this is the `mean()` (or average). First we define the new labels.
 
 ```{r lab_avgmrktcap_compname}
 lab_avgmrktcap_compname <- ggplot2::labs(title = "Average Market Cap (2013-2019)", 
@@ -229,7 +269,7 @@ TopPharmComp %>%
 
 See below: 
 
-```{r aes-sol-05-gg_col_graph, message=FALSE, warning=FALSE}
+```{r aes-sol-05-gg_col_graph, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComp %>% 
   group_by(company_name, stock_exch) %>% 
   summarize(
@@ -267,7 +307,7 @@ TopPharmComp %>%
 
 See below:
 
-```{r aes-sol-6, message=FALSE, warning=FALSE}
+```{r aes-sol-6, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComp %>% 
   group_by(company_name, stock_exch) %>% 
   summarize(
@@ -312,7 +352,7 @@ gg_col_graph
 
 See below:
 
-```{r label-sol-07, message=FALSE, warning=FALSE}
+```{r label-sol-07, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 lab_avgmrktcap_comp_fill <- ggplot2::labs(x = "Company", 
                               y = "Average Market cap (USD in billions)", 
                               title = "Average Market Cap (2013-2019)", 
@@ -335,12 +375,15 @@ TopPharmComp %>%
 gg_col_graph
 ```
 
+# Labelling Values
 
-## Labelling Values {.tabset}
+We're going to focus on the Largest Market Cap (`largest_market_cap_us_bil`) and Largest Market Cap Date (`largest_market_cap_date`) variables.
 
-We're going to focus on the Largest Market Cap (`largest_market_cap_us_bil`) and Largest Market Cap Date (`largest_market_cap_date`) variables. 
+## Scatter plot {.tabset}
 
-### Graph Lables
+First we are going to build a scatter plot (`geom_point()`) of Largest Market Cap over time. 
+
+### Graph lables
 
 We will define a new set of labels below. 
 
@@ -365,6 +408,8 @@ TopPharmComCaps <- TopPharmComp %>%
 
 
 ### solution
+
+See below:
 
 ```{r dplyr-sol-08-TopPharmComCaps, message=FALSE, warning=FALSE}
 TopPharmComCaps <- TopPharmComp %>% 
@@ -391,7 +436,7 @@ TopPharmComCaps %>%
 
 We can see this plot is showing us the date they reached their Largest Market Cap, and the date they reached it. But we still can't see which company is which.
 
-```{r aes-sol-09, message=FALSE, warning=FALSE}
+```{r aes-sol-09, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComCaps %>% 
   ggplot() + 
   geom_point(aes(x = largest_market_cap_date, 
@@ -400,9 +445,9 @@ TopPharmComCaps %>%
   lab_lrg_mrkt_cap_trend
 ```
 
-## Adding Layers {.tabset}
+## Adding text labels {.tabset}
 
-We're going to add another layer to this plot that will allow us to plot text values onto their points. 
+We're going to add text labels to each data point. This is as simple as adding another layer to our previous plot! We just need to identify the proper geom, then map the variables to their aesthetics. 
 
 ### exercise 
 
@@ -432,9 +477,9 @@ TopPharmComCaps %>%
 
 ### solution
 
-We can see this plot has labelled each company so we can clearly see the date they reached their Largest Market Cap in comparison to other companies. The labels are hard to see, though...
+We can see this plot has labeled each company on their data-point, so we can clearly see the date they reached their Largest Market Cap in comparison to other companies. The labels are hard to see, though. We can try to adjust this with `size`, but fortunately there is a package specifically designed to help with text labels.
 
-```{r ael-sol-10, message=FALSE, warning=FALSE}
+```{r ael-sol-10, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComCaps %>% 
   
   ggplot() + 
@@ -468,9 +513,9 @@ TopPharmComCaps %>%
 
 ### solution
 
-Now the labels for each company are easier to see. But this is still a very busy graph...
+Now the labels for each company are easier to see! However, this is still a very busy graph. We probably don't want label **all** the points on the scatter plot. We will cover more advanced uses of text annotations in the next section.
 
-```{r aes-sol-11, message=FALSE, warning=FALSE}
+```{r aes-sol-11, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 library(ggrepel)
 TopPharmComCaps %>% 
   ggplot(aes(x = largest_market_cap_date, 
@@ -480,11 +525,13 @@ TopPharmComCaps %>%
   lab_lrg_mrkt_cap_trend 
 ```
 
-## Using Facets {.tabset}
+# Facetting
 
-In the next few exercises we're going to see how to use facets to explore values across different levels and scales. 
+In the next few exercises we're going to see how to use facets to explore values across different levels and scales. Facets show subplots for different levels of a grouping variable.
 
-Facets show subplots for different levels of a grouping variable.
+## Scales {.tabset}
+
+We're going to build a few graphs using `facet_wrap()`. Each exercise uses a different setting for the `scales` argument.
 
 ### exercise 
 
@@ -506,9 +553,11 @@ TopPharmComCaps %>%
 
 ### solution
 
-This creates two graphs--one for each level of `company_type`. Why would setting the `scales` to `"free"` be an issue?
+This creates two graphs--one for each level of `company_type`. Why would setting the `scales` to `"free"` be an issue? 
 
-```{r aes-sol-12, message=FALSE, warning=FALSE}
+It makes it difficult to compare points (i.e. companies) when they don't share common axes.
+
+```{r aes-sol-12, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComCaps %>% 
   ggplot(aes(x = largest_market_cap_date, 
              y = largest_market_cap_us_bil)) + 
@@ -541,9 +590,9 @@ TopPharmComCaps %>%
 
 ### solution
 
-This fixes the `y` axis, but allows the `x` to adjust according to the data. How can this be helpful?
+This fixes the `y` axis, but allows the `x` to adjust according to the data. Now the data are comparable in terms of the `y` axis, but over different time-frames (along the `x` axis).
 
-```{r aes-sol-13, message=FALSE, warning=FALSE}
+```{r aes-sol-13, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComCaps %>% 
   filter(stock_exch %in% c("NASDAQ", "NYSE"), 
          company_type == "Pharma") %>% 
@@ -580,10 +629,9 @@ TopPharmComCaps %>%
 
 ### solution
 
-Now we have a fixed `x` axis, and the `y` axis can adjust according to the data. How might this be helpful?
+Now we have a fixed `x` axis, and the `y` axis can adjust according to the data. This presents a similar dilemma--we can compare the time-frames, but the `y` axes are misleading. 
 
-
-```{r aes-sol-14, message=FALSE, warning=FALSE}
+```{r aes-sol-14, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
 TopPharmComCaps %>% 
   filter(stock_exch %in% c("NASDAQ", "NYSE"), 
          company_type == "Pharma") %>% 
@@ -597,13 +645,38 @@ TopPharmComCaps %>%
   lab_lrg_mrkt_cap_trend 
 ```
 
+### Common axes
+
+This is why it's preferable to keep *both* the `x` and `y` axes identical whenever we use facets. See below:
+
+```{r aes-sol-15, message=FALSE, warning=FALSE, fig.height=5, fig.width=7, out.height='100%', out.width='100%'}
+TopPharmComCaps %>% 
+  filter(stock_exch %in% c("NASDAQ", "NYSE"), 
+         company_type == "Pharma") %>% 
+  
+  ggplot(aes(x = largest_market_cap_date, 
+             y = largest_market_cap_us_bil)) + 
+  geom_point(aes(color = stock_exch), show.legend = FALSE) + 
+  geom_text_repel(aes(label = stock_id), size = 3) + 
+  facet_wrap(. ~ stock_exch, nrow = 2) + 
+  
+  lab_lrg_mrkt_cap_trend 
+```
+
+
 # Recap 
 
 These exercises have covered: 
  
-1. Wrangling data with `dplyr`, `stringr` and `janitor`    
-2. Tidying data with `tidyr`   
-3. Graphing data using positions, aesthetics, and geoms   
+1. Build the labels first!  
+2. Mapping variables to position     
+  - `aes()` is used to map variables to `x` and `y` positions  
+3. Mapping variables to aesthetics  
+  - `aes()` is used to map variables to `color`, `fill`, etc. 
+4. Graphing data summaries  
+  - Use data wrangling pipelines to pass `data.frame`s to `ggplot2` functions  
+5. Labeling data points (with layers)  
+  - add labels with `geom_text()` and `ggrepel` layers  
 4. Using `facet`s to explore graphs across different scales for the `x` and `y` axes   
 
 ```{r chrome_print, eval=FALSE, include=FALSE, echo=FALSE}
