--- a/mk01_rmarkdown-tables.Rmd
+++ b/mk01_rmarkdown-tables.Rmd
@@ -7,6 +7,7 @@ output:
     toc_float: yes
     toc_depth: 5
     number_sections: yes
+    code_folding: hide
     theme: flatly
     df_print: paged
 
@@ -52,20 +53,177 @@ library(reactable)
 library(DT)
 ```
 
+# Yahoo finance data
 
-# Data
+We're going to be returning to stock data for this section. Stock (or quant) data is typically presented on the web or in a dashboard, so it's great for demonstrating the capabilities of R table packages. 
 
-The data for this section comes from the `fivethirtyeight` and `tidytuesdayR` packages. 
+Here is the source for the dataset below: https://finance.yahoo.com/u/yahoo-finance/watchlists/biotech-and-drug-stocks
 
-```{r data-package, message=FALSE, warning=FALSE}
-library(fivethirtyeight)
-library(tidytuesdayR)
+## Example summary table  {.tabset}
+
+These data have already been formatted in a way that is great for a table, but would pose problems if we tried to visualize them. For example, the `percent_change`-`market_cap` columns have symbols that cause them to be read into R as characters. We would need to wrangle these data quite a bit to get them into a format we could use.
+
+```{r biotech-and-drug-stocks}
+BioTechDrugStocks <- read_csv("data/2020-12-11-BioTechDrugStocks.csv")
+BioTechDrugStocks
 ```
 
-## 
+## Stock data from `quantmod` {.tabset}
 
+We will also import some actual stock data using `quantmod` and `xts` packages.
 
-```{r}
-tuesdata <- tidytuesdayR::tt_load('2018-07-03')
+```{r biotech_symbols, message=FALSE, warning=FALSE}
+source("code/quant-packages.R")
+biotech_symbols <- c("BMRN", "MRK", "AZN", "GSK", "BNTX", "MRNA")
+biotech_prices <- quantmod::getSymbols(biotech_symbols, 
+                  # returns an object with the opening price, closing price, 
+                  # adjusted price, daily high, daily low and daily volume
+                  # for each ticker.
+                     src = 'yahoo', 
+                     from = "2019-12-31", to = "2020-12-11", 
+                     auto.assign = TRUE, 
+                     warnings = FALSE) %>% 
+          # Ad() and get() is used to isolate the adjusted price
+          purrr::map(~Ad(get(.))) %>% 
+          # merge() looks for the date index shared by our objects and 
+          # uses that index to align the data.
+          purrr::reduce(merge) %>% 
+          # use colnames<- to rename the columns according to the 
+          # symbols object.
+          `colnames<-`(biotech_symbols)
 ```
+
+### Convert adjusted prices to wide 
+
+Here is the wide version of the prices.
+
+```{r PricesWide}
+biotech_prices %>%
+  xts::to.monthly(indexAt = "lastof", 
+             OHLC = FALSE) %>%
+  # convert the index to a date
+  base::data.frame(date = index(.)) %>%
+  # now remove the index because it got converted to row names 
+  tibble::remove_rownames() %>% 
+  dplyr::select(date, 
+                dplyr::everything()) -> PricesWide
+PricesWide
+```
+
+### Calculate log returns wide
+
+Below we create a wide dataset of log returns. 
+
+```{r ReturnsWide}
+PricesWide %>%
+  tidyr::pivot_longer(names_to = "asset", 
+                      values_to = "prices", 
+                      cols = -date) %>% 
+  dplyr::group_by(asset) %>% 
+  # calculate log returns and add those returns to the data frame
+  dplyr::mutate(returns = (log(prices) - log(lag(prices)))) %>% 
+  dplyr::select(-prices) %>% 
+  tidyr::pivot_wider(names_from = asset, 
+                     values_from = returns) %>% 
+  dplyr::filter(!is.na(BMRN)) -> ReturnsWide
+ReturnsWide
+```
+
+## Tidy adjusted prices & log returns {.tabset}
+
+Below we filter both wide datasets to `2020-12-31`, pivot them into a long format, and join them into a single dataset with `Symbols`, `Adj Prices`, and `Log Returns`.
+
+### Prices 2020-12
+
+```{r bt_price_12_2020}
+bt_prices_12_2020 <- PricesWide %>% 
+  filter(date == "2020-12-31") %>% 
+  pivot_longer(names_to = "symbols", 
+               values_to = "prices", cols = -date)
+bt_prices_12_2020
+```
+
+### Returns 2020-12
+
+```{r bt_returns_12_2020}
+bt_returns_12_2020 <- ReturnsWide %>% 
+  filter(date == "2020-12-31") %>% 
+  pivot_longer(names_to = "symbols", 
+               values_to = "returns", cols = -date)
+bt_returns_12_2020
+```
+
+### Adj Prices & Log Returns
+
+```{r bt_stocks_12_2020}
+bt_stocks_12_2020 <- bt_prices_12_2020 %>% 
+  inner_join(x = ., 
+           y = bt_returns_12_2020, 
+           by = c("date", "symbols")) %>% 
+  select(-date) %>% 
+  mutate(returns = round(returns, digits = 4),
+         prices = round(prices, digits = 4)) %>% 
+  rename(`Adj Prices` = prices,
+         `Log Returns` = returns, 
+         Symbols = symbols)
+bt_stocks_12_2020
+```
+
+# `gt` package
+
+## Dealing with merged columns {.tabset}
+
+### merging columns 
+
+Merge columns using...
+
+### column headers 
+
+Add column headers using...
+
+# `reactable` package
+
+The `reactable` package provides a comprehensive library of data display features. 
+
+## Dealing with symbols {.tabset}
+
+Adding `+` and `-` 
+
+### adding symbols 
+
+```{r reactable-colDef}
+reactable(bt_stocks_12_2020, columns = list(
+  # add + or - for returns
+  `Log Returns` = colDef(
+    cell = function(value) {
+      # here we use paste0() to combine the value with +
+      if (value >= 0) paste0("+", value) else value
+    },
+    # add color for values above or below 0
+    style = function(value) {
+      color <- if (value > 0) {
+        # green if above
+        "#008000"
+        # red if below
+      } else if (value < 0) {
+        "#e00000"
+      }
+      list(fontWeight = 600, color = color)
+    }
+  )
+))
+```
+
+# `DT` package 
+
+The `DT` package...
+
+## Filering data {.tabset}
+
+To allow users to filter the data in your table, use the...
+
+
+
+
+
 
